---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2023-03-03
  Bugfixes:
    - Fixed crash when a player is removed from the game.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2023-02-28
  Features:
    - Import and export inventory filter configuration using blueprint templates.
    - Clear all inventory filters with a single button click.